--- a/pom.xml
+++ b/pom.xml
@@ -15,25 +15,25 @@
 
 	<modules>
 		<module>hutool-all</module>
-		<module>hutool-bom</module>
-		<module>hutool-aop</module>
-		<module>hutool-bloomFilter</module>
-		<module>hutool-cache</module>
+<!--		<module>hutool-bom</module>-->
+<!--		<module>hutool-aop</module>-->
+<!--		<module>hutool-bloomFilter</module>-->
+<!--		<module>hutool-cache</module>-->
 		<module>hutool-core</module>
-		<module>hutool-cron</module>
-		<module>hutool-crypto</module>
-		<module>hutool-db</module>
-		<module>hutool-dfa</module>
-		<module>hutool-extra</module>
+<!--		<module>hutool-cron</module>-->
+<!--		<module>hutool-crypto</module>-->
+<!--		<module>hutool-db</module>-->
+<!--		<module>hutool-dfa</module>-->
+<!--		<module>hutool-extra</module>-->
 		<module>hutool-http</module>
 		<module>hutool-log</module>
-		<module>hutool-script</module>
-		<module>hutool-setting</module>
-		<module>hutool-system</module>
+<!--		<module>hutool-script</module>-->
+<!--		<module>hutool-setting</module>-->
+<!--		<module>hutool-system</module>-->
 		<module>hutool-json</module>
-		<module>hutool-poi</module>
-		<module>hutool-captcha</module>
-		<module>hutool-socket</module>
+<!--		<module>hutool-poi</module>-->
+<!--		<module>hutool-captcha</module>-->
+<!--		<module>hutool-socket</module>-->
 	</modules>
 
 	<properties>
